# SLIP

./: .gitignore  LICENSE  PARSER_PLAN.md  README.md  SLIP Language Reference.md  SLIP Notes.md  grammar_rules.md  koine-docs.md  pyproject.toml  slip.py  slip_grammar.yaml  test-script.slip  test_parser.py
docs/: 01 SLIP Scripting.md  02 SLIP Programs.md  03 SLIP Advanced.md  04 SLIP Best Practices.md  Appendix A - StdLib Reference.md  Appendix B - SLIP Style Guide.md  Appendix C - Design Philosophy.md  SLIP Design Philosophy.md  SLIP Implementation.md  SLIP Language Reference.md  SLIP Style Guide.md
future-features/: tables.md
grammar/: slip_grammar.yaml  slip_path.yaml  slip_sig.yaml
grammar-docs/: koine-docs.md
performance-docs/: SLIP JIT Performance Guide.md  SLIP Python Performance.md
plan/: notes.md
slip/: __init__.py  core.slip  root.slip  slip_datatypes.py  slip_file.py  slip_fs.py  slip_http.py  slip_interpreter.py  slip_printer.py  slip_runtime.py  slip_serialize.py  slip_transformer.py
tests/: test_additional_coverage.py  test_as_slip.py  test_bytestream_literals.py  test_call_modes.py  test_cell.py  test_chapter_001.py  test_chapter_002.py  test_chapter_003.py  test_chapter_004.py  test_chapter_005.py  test_chapter_006.py  test_chapter_006_control_flow.py  test_chapter_007.py  test_chapter_008.py  test_chapter_009.py  test_chapter_010.py  test_chapter_011.py  test_chapter_012.py  test_chapter_013.py  test_chapter_014.py  test_chapter_015.py  test_contract_dispatch.py  test_contract_resolver_transactions.py  test_contract_this_reserved.py  test_core.py  test_dispatch_precedence.py  test_error_tracing.py  test_etcher_integration.py  (+39 more)
(+3 files in other folders)
